examples/test/testpolicy2438.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2438
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key7: value19
      key13: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value44
      podSelector:
        matchLabels:
          key11: value17
          key6: value3
          key44: value17
